--- a/main.html
+++ b/main.html
@@ -9,7 +9,30 @@
 </head>
 <body>
     <!-- add table here -->
-
+<table border="1">
+	<thead>
+	<tr id="a1">
+		<th>Name</th>
+		<th>Kills</th>
+		<th>Revived</th>
+		<th>Damage</th>
+	</tr>
+	</thead>
+	<tbody>
+        <tr>
+			<td class="bgmi"><span class="bgmi">Arif</span></td>
+			<td>9</td>
+			<td>3</td>
+			<td>855</td>
+		</tr>
+		<tr>
+			<td class="bgmi"><span class="bgmi">Aniket</span></td>
+			<td>5</td>
+			<td>1</td>
+			<td>700</td>
+		</tr>
+	</tbody>
+</table>
         
 </body>
 </html>
